page: feeds sub dev

--- a/.vitepress/theme/styles/index.scss
+++ b/.vitepress/theme/styles/index.scss
@@ -1,3 +1,6 @@
 @import './vars.scss';
 @import './rainbow.scss';
 @import './overrides.scss';
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
