--- a/.vitepress/theme/styles/index.scss
+++ b/.vitepress/theme/styles/index.scss
@@ -1,6 +1,6 @@
-@import './vars.scss';
-@import './rainbow.scss';
-@import './overrides.scss';
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@use './vars.scss';
+@use './rainbow.scss';
+@use './overrides.scss';
+@use 'tailwindcss/base';
+@use 'tailwindcss/components';
+@use 'tailwindcss/utilities';
