--- a/.vitepress/theme/styles/index.scss
+++ b/.vitepress/theme/styles/index.scss
@@ -1,6 +1,4 @@
 @use './vars.scss';
 @use './rainbow.scss';
 @use './overrides.scss';
-@use 'tailwindcss/base';
-@use 'tailwindcss/components';
-@use 'tailwindcss/utilities';
+@use "tailwindcss";
